--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
+    "react-uuid": "^2.0.0",
     "sass": "^1.70.0"
   },
   "devDependencies": {
